<resources>
    <string name="app_name">NsroMeet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="username">Username</string>
    <string name="an_error">An error occurred</string>
    <string name="enter_pass">Please enter your password....</string>
    <string name="enter_username">Please enter username....</string>
    <string name="account_not_exist">Sorry, this account does not exist or has been deleted…</string>
    <string name="login_required">Login is required…</string>
    <string name="require_field">First  name, Last name,  Mobile and Passwords are required</string>
    <string name="passwords_do_not_much">Passwords do not much…</string>
    <string name="new_passwords_do_not_much">New Passwords do not much…</string>
    <string name="invalid_mobile_number">Invalid Mobile number…</string>
    <string name="please_wait">Please Wait</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter %s Name</string>
    <string name="full_name">Full Name</string>
    <string name="change_number">Change Number</string>
    <string name="enter_valid_pass">Please enter a valid phone number…</string>
    <string name="enter_full_name">Please enter your name in full…</string>
    <string name="start_meet">Start Meeting</string>
    <string name="subscriptions">Subscription</string>
    <string name="history">History</string>
    <string name="t_and_c"><![CDATA[Terms & Policies]]></string>
    <string name="profile">Profile</string>
    <string name="join_meet">Join Meeting</string>
    <string name="schedule">Schedule</string>
    <string name="schedules">Schedules</string>
    <string name="enter_meeting_id">Enter meeting ID</string>
    <string name="go">GO</string>
    <string name="start_meeting_notice">Just click GO to choose a random ID or enter Conference ID below</string>
    <string name="join_meeting_notice">Enter Conference ID below then click go to join your NsroMeet, your colleagues might be waiting for you…</string>
    <string name="school_meetings">School Meetings</string>
    <string name="general_meeting">General Meeting</string>
    <string name="setup_school">Setup School</string>
    <string name="cancel">Cancel</string>
    <string name="choose_your_meeting_type">Choose your meeting type!</string>
    <string name="setup_notice">Sorry, you have not set up your school yet but it is a requirement, so lets go ahead and do that  quickly</string>
    <string name="basic_profile">Basic Profile</string>
    <string name="update">Update</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="name_cannot_be_empty">Name cannot be empty!</string>
    <string name="all_password_fields_require">All Password fields are required</string>
    <string name="logout">Logout</string>
    <string name="provide_country_code">Provide number with country code. eg +233</string>
    <string name="countrycode_gh">+233</string>
    <string name="school_profile">School Profile</string>
    <string name="no_school">No School</string>
    <string name="no_id">No ID</string>
    <string name="no_faculty">No Faculty</string>
    <string name="no_department">No Department</string>
    <string name="no_class">No Class</string>
    <string name="no_level">No Level</string>
    <string name="select_or_create_school">Select your school below or create if not in the list…</string>
    <string name="select_or_create_faculty">Below are the available faculties for your school, you can help us by creating those which are not found and report the wrong ones…</string>
    <string name="select_or_create_department">Below are the available departments for your faculty, you can help us by creating those which are not found and report the wrong ones…</string>
    <string name="select_or_create_class">Below are the available classes for your department, you can help us by creating those which are not found and report the wrong ones…</string>
    <string name="select_your_level">Select your level for the list below…</string>
    <string name="select_your_id">Select your id for the list below…</string>
    <string name="create_new_">Create New %s</string>
    <string name="create_school">Create New School</string>
    <string name="create_faculty">Create New Faculty</string>
    <string name="create_department">Create New Department</string>
    <string name="create_class">Create New Class</string>
    <string name="some_error_occurred">Some error occurred…</string>
    <string name="groups">Groups</string>
    <string name="report_button">Report Button</string>
    <string name="its_school">school</string>
    <string name="its_faculty">faculty</string>
    <string name="its_department">department</string>
    <string name="its_class">class</string>
    <string name="its_level">level</string>
    <string name="its_id_type">idtype</string>
    <string name="retry">Retry</string>
    <string name="thanks_for_your_feedback">Thanks for the Feedback.</string>
    <string name="ok">OK</string>
    <string name="write_report">"Please write report… "</string>
    <string name="send_report">Send Report</string>
    <string name="inappropirate">This is not appropriate at all, I don\'t think it should be on this our noble platform, could you do something about it?</string>
    <string name="this_might_be_scam">I am not too sure of this but I think it could be a scam, could you do something about it?</string>
    <string name="not_true">This is not true, could you please delete it?</string>
    <string name="i_want_to_write">I want to write</string>
    <string name="setup_class_first">You need to set up your class first</string>
    <string name="setup_department_first">You need to set up your department first</string>
    <string name="setup_faculty_first">You need to set up your faculty first</string>
    <string name="setup_school_first">You need to set up your school first</string>
    <string name="school_success">%s successfully updated</string>
    <string name="you_can_join_school_level_call">You can join the %s level meeting by clicking on me.</string>
    <string name="continue_to_the_">Continue to the </string>
    <string name="school_level">school level</string>
    <string name="faculty_level">faculty level</string>
    <string name="department_level">department level</string>
    <string name="class_level">class level</string>
    <string name="setup_for_access_note">You need to set up %s of your %s to have access to the %s level…</string>
    <string name="confirm_your_choice">Confirm that you are choosing %s as your %s.</string>
    <string name="faculty">Faculty</string>
    <string name="department">Department</string>
    <string name="school">School</string>
    <string name="classs">class</string>
    <string name="school_level_">School Level</string>
    <string name="faculty_level_">Faculty Level</string>
    <string name="departmental_level_">Departmental Level</string>
    <string name="class_level_">Class Level</string>
    <string name="level">level</string>
    <string name="level_version_of_meet">Join %ss in %s</string>
    <string name="idtype">type of ID</string>
    <string name="idtype_student">Student</string>
    <string name="idtype_lecturer">Lecturer/Instructor</string>
    <string name="idtype_supervisor">Supervisor</string>
    <string name="location">Location</string>
    <string name="unrecognised_url">Unrecognised url…</string>
    <string name="go_back">Go Back</string>
    <string name="meeting_info">Meeting Info</string>
    <string name="no_internet_connection">Please Connect to Internet</string>
    <string name="otp_title">Please enter the 6 digit verification code</string>
    <string name="otp_button_text">VERIFY</string>
    <string name="resend_msg">Didn’t receive the OTP?</string>
    <string name="resend_again_msg">Resend again</string>
    <string name="sent_to_233_xxxx_xxx">sent to +233 XXXX XXX XXX</string>
    <string name="sent_to_">sent to %s</string>
    <string name="wrong_v_code">Wrong Verification code</string>
    <string name="next">Next</string>
    <string name="enter_mobile_notification">Please enter your mobile number in  full</string>
    <string name="timer_time">%s Secs</string>
    <string name="login_with_phone">Login with Phone</string>
    <string name="no_image_found">Image not found</string>
    <string name="new_schedule">Schedule Meeting</string>
    <string name="select_an_option">Select an option.</string>
    <string name="add_new">Add New</string>
    <string name="no_result_found_">No results found</string>
    <string name="nsromeet_meeting">NsroMeet Meeting</string>
    <string name="start_time">Start time: %s</string>
    <string name="duration_time">Duration time: %s</string>
    <string name="meeting_init_by">Initiated by: %s</string>
    <string name="conference_id">Meeting ID: %s</string>
    <string name="start">Start</string>
    <string name="copy_invitation">Copy Invitation</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="host_type">Host Type: %s</string>
    <string name="do_you_want_to_delete_this">Do you really want to %s this schedule? %s You cannot undo if you select yes.</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_start_meeting_now">Do you want to start meeting now? %s Starting meeting now will change the start time to now.</string>
    <string name="copied">Copied</string>
    <string name="you_have_no_schedule">You have no schedule.</string>
    <string name="waiting">waiting</string>
    <string name="ongoing">ongoing</string>
    <string name="done">done</string>
    <string name="end_meeting">End Meeting</string>
    <string name="meeting_status">Meeting Status: %s</string>
    <string name="remove">Remove</string>
    <string name="date_and_time">Date and Time</string>
    <string name="title">Title</string>
    <string name="audio_host">Audio Host</string>
    <string name="video_host">Video Host</string>
    <string name="choose_who_to_schedule_with">Choose to schedule with</string>
    <string name="select_those_involve">Select those involved</string>
    <string name="you_have_a_new_schedule">You have a new schedule, tap to check it out</string>
    <string name="unmute">Unmute</string>
    <string name="mute">Mute</string>
    <string name="new_group">New Group</string>
    <string name="group_description">Group Description</string>
    <string name="group_name">Group Name</string>
    <string name="create_group">Create Group</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="group_name_required">Group %s required…</string>
    <string name="you_have_no_group">You have no group</string>
    <string name="group">group</string>
    <string name="privacy">Privacy</string>
    <string name="request">Request</string>
    <string name="clear_image_of_staff_id_card">Clear image of staff ID card</string>
    <string name="clear_image_of_national_id_card">Clear image of national ID card</string>
    <string name="clear_image_of_any_additional_file_optional">Clear image of any additional file (Optional)</string>
    <string name="id_request">ID Request</string>
    <string name="optional_notes">Optional notes</string>
</resources>