<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_new_meet_bg"
    android:backgroundTint="@color/colorAccent"
    android:minHeight="230dp"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/title_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/school_meetings"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/init_by"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:text="@string/meeting_init_by"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/start_time"
        android:textColor="@color/white"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/duration_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/duration_time"
        android:textColor="@color/white"
        android:textSize="16sp" />



    <TextView
        android:id="@+id/host_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/host_type"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/meeting_status"
        android:textColor="@color/white"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/conference_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/conference_id"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/bg_sharp_curve_coners_bg"
                android:backgroundTint="@color/meet_orange"
                android:padding="10dp"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/copy_invitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/bg_sharp_curve_coners_bg"
                android:padding="10dp"
                android:text="@string/copy_invitation"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/bg_sharp_curve_coners_bg"
                android:padding="10dp"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:visibility="gone" />


            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/bg_sharp_curve_coners_bg"
                android:padding="10dp"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </HorizontalScrollView>



</LinearLayout>