<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.ScheduleActivity">

    <include layout="@layout/cus_toolbar"/>

    <RelativeLayout
        android:id="@+id/listSchedulesRL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/noticeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_have_no_schedule"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:textSize="14sp"
            android:visibility="gone"/>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/newScheduleSV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:text="@string/title"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/schedule_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/nsromeet_meeting"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_sharp_curve_coners_bg"
                android:inputType="text"
                android:padding="8dp"
                android:singleLine="true"
                android:textSize="22sp"
                tools:ignore="LabelFor" />




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:text="@string/date_and_time"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
                android:id="@+id/date_time"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:picker_curved="true"
                app:picker_cyclic="true"
                app:picker_visibleItemCount="7"
                app:picker_mustBeOnFuture="true"
                app:picker_itemSpacing="6dp"
                app:picker_curvedMaxAngle="45"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="16dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/duration_hrs"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/duration_mins"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <RadioGroup
                android:id="@+id/video_or_audio"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio_host"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />
                <RadioButton
                    android:id="@+id/audio_host"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/video_host"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />
                <RadioButton
                    android:id="@+id/video_host"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RadioGroup>






            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:text="@string/select_those_involve"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/schedule_spanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/choose_who_to_schedule_with"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/errorTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_result_found_"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/class_list"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:minHeight="170dp" />

                <ProgressBar
                    android:id="@+id/list_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>

            </RelativeLayout>
            
          <LinearLayout
              android:layout_marginTop="28dp"
              android:layout_marginBottom="48dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

              <View
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"/>
              <Button
                  android:id="@+id/add_schedule"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/schedule"
                  android:background="@drawable/bg_sharp_curve_coners_bg"
                  android:backgroundTint="@color/colorAccent"
                  android:textColor="@color/white"
                  android:padding="15dp"
                  android:layout_margin="10dp"/>


              <Button
                  android:id="@+id/cancel_action"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/cancel"
                  android:background="@drawable/bg_sharp_curve_coners_bg"
                  android:textColor="@color/colorAccent"
                  android:padding="10dp"
                  android:layout_margin="10dp"/>

          </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>